[Fix] fix missing color change and fix test nick and password variable

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -22,7 +22,7 @@
     border: 1px solid black;;
     text-align: center;
     padding: 10px;
-    color: yellow;
+    background-color: purple;
 }
 
 .figure{
